fixxed layout issues

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -114,7 +114,6 @@ html.has-scroll-dragging {
 
 body {
   min-height: 100vh;
-  min-width: 100%;
   font-feature-settings: 'kern';
   text-rendering: optimizeSpeed;
   -webkit-font-smoothing: antialiased;
@@ -124,6 +123,7 @@ body {
   line-height: 1.5;
   font-size: 1.5rem;
   overscroll-behavior-y: none;
+  color: #161616;
 }
 
 a {
@@ -161,13 +161,14 @@ h1 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
   }
+
   &.sml-ptb {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
   }
 
   &.large-ptb {
-    padding-top: 4rem;
+    padding-top: 4.5rem;
     padding-bottom: 4rem;
   }
 }
@@ -219,6 +220,34 @@ h1 {
   &.w-75 {
     @media (min-width: $from-medium) {
       width: 75%;
+    }
+  }
+}
+
+//seperator
+.seperator {
+  display: block;
+  height: 1px;
+
+  &::before {
+    content: '';
+    position: absolute;
+    bottom: 0.5vw;
+    left: 0;
+    right: 0;
+    height: 1px;
+    background-color: rgba(16, 16, 16, 0.8);
+    transform: scaleX(0);
+    transition: transform 1s $easing;
+
+    html.is-ready & {
+      transform: scaleX(1);
+    }
+    @media (max-width: $to-small) {
+      margin: 0 1.25rem;
+    }
+    @media (min-width: $from-medium) {
+      margin: 0 3.25rem;
     }
   }
 }
