--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -1,6 +1,7 @@
 .hero {
+  position: relative;
   @media (max-width: $to-small) {
-    height: 60vh;
+    height: 90vh;
     min-height: 340px;
   }
 
@@ -10,40 +11,44 @@
   }
 
   @media (min-width: $from-medium) {
-    height: 90vh;
+    height: 91vh;
     min-height: rem(750px);
   }
 
   .middle {
     @media (max-width: $to-small) {
-      margin-top: calc(60vh / 4);
+      margin-top: calc(60vh / 3);
     }
 
-    @media (min-width: $from-medium) {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-    }
-
+    margin-top: calc(60vh / 4);
     P {
-      @media (max-width: $to-small) {
-        text-align: center;
-      }
       line-height: 1.2;
       font-weight: 500;
       letter-spacing: -0.03em;
-      color: #333;
+      text-align: center;
+    }
+  }
+
+  .h-summary {
+    opacity: 0;
+    transform: translateY(-20%);
+    transition: opacity 0.1s $easing, transform 1s $easing;
+    will-change: transform;
+
+    .h-summary_txt {
+      overflow: hidden;
+    }
+
+    html.is-ready & {
+      opacity: 1;
+      transform: none;
+      transition-delay: 0.15s;
     }
   }
 
   .h-header_title {
-    // text-transform: uppercase;
-    // letter-spacing: -0.09em;
     font-weight: 500;
-    font-size: clamp(2rem, 11vw, 11rem);
-    color: #161616;
+    font-size: clamp(3rem, 12vw, 12rem);
     text-align: center;
     font-family: 'Roslindale', sans-serif;
   }
@@ -83,44 +88,7 @@
     padding: 0 1.5rem;
     @media (min-width: $from-medium) {
       padding: 0 3rem;
-      bottom: 1.5vw;
-    }
-  }
-
-  .h-summary {
-    opacity: 0;
-    transform: translateY(100%);
-    transition: opacity 0.1s $easing, transform 1s $easing;
-    will-change: transform;
-
-    .h-summary_txt {
-      overflow: hidden;
-    }
-
-    html.is-ready & {
-      opacity: 1;
-      transform: none;
-      transition-delay: 0.15s;
-    }
-  }
-
-  .h-header_line {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    margin: 0;
-    transform: scaleX(0);
-    transition: transform 1s $easing;
-
-    html.is-ready & {
-      transform: scaleX(1);
-    }
-    @media (max-width: $to-small) {
-      margin: 0 1.25rem;
-    }
-    @media (min-width: $from-medium) {
-      margin: 0 3.25rem;
+      bottom: 1vw;
     }
   }
 }
